# moleculas

./: .gitignore  CMakeLists.txt  main.cpp  test_window.cpp
data/: Conformer3D_COMPOUND_CID_2244.json  data2.json
include/: Atom.h  Bond.h  Molecule.h  MoleculeLoader.h  ShaderUtils.h
shaders/: fragment.glsl  vertex.glsl
src/: Atom.cpp  Molecule.cpp  MoleculeLoader.cpp  ShaderUtils.cpp
